Fix error login not showing

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -13,7 +13,7 @@
 }
 
 .description-div {
-    width: 600px;
+    width: 650px;
     margin-top: 25px
 }
 
